# jetsonDetect-T506

./: CMakeLists.txt  README.md  jetson_check.sh  jetson_restart.sh  jetson_stop.sh  main.cpp  maincopy.cpp  n.cpp
config/: 16config.json  17config.json  config.json
include/: config.h
lib/: libGLEW.so.2.2  libGLEWmx.so.1.13  libopencv_alphamat.so.406  libopencv_aruco.so.406  libopencv_bioinspired.so.406  libopencv_calib3d.so.406  libopencv_cudalegacy.so.406  libopencv_cudaobjdetect.so.406  libopencv_cudev.so.406  libopencv_datasets.so.406  libopencv_dnn_objdetect.so.4.6.0  libopencv_dnn_superres.so.406  libopencv_face.so.4.6.0  libopencv_features2d.so.406  libopencv_flann.so.4.6.0  libopencv_freetype.so.406  libopencv_fuzzy.so.4.6.0  libopencv_hfs.so.406  libopencv_img_hash.so.4.6.0  libopencv_imgcodecs.so.406  libopencv_line_descriptor.so.4.6.0  libopencv_mcc.so.406  libopencv_ml.so.406  libopencv_objdetect.so.406  libopencv_optflow.so.4.6.0  libopencv_phase_unwrapping.so.406  libopencv_photo.so.4.6.0  libopencv_plot.so.4.6.0  libopencv_rgbd.so.406  libopencv_saliency.so.406  libopencv_shape.so.406  libopencv_stereo.so.4.6.0  libopencv_stitching.so.4.6.0  libopencv_structured_light.so.406  libopencv_superres.so.4.6.0  libopencv_surface_matching.so.4.6.0  libopencv_text.so.406  libopencv_tracking.so.406  libopencv_videoio.so.406  libopencv_wechat_qrcode.so.406  (+3 more)
src/: config.h
